# VulkanPOC

./: CMakeLists.txt  TODO.md  change.md
shaders/: colored_triangle.vert  default_lit.frag  mesh.vert  mesh.vert.spv  tri_mesh.vert  tri_mesh_pushconstants.vert  tri_mesh_ssbo.vert  triangle.frag  triangle.vert
src/: CMakeLists.txt  Main.cpp  vk_engine.cpp  vk_engine.h  vk_initializers.cpp  vk_initializers.h  vk_mesh.cpp  vk_mesh.h  vk_types.h
